Fixed form height on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ body.dark-mode .chat-form input {
 
 .chat-form{
   border-top: 1px solid #ddd;;
+  min-height: 60px;
 }
 
 body.dark-mode .chat-form{
